Prevent Collapsing Tabsbar and New Look

--- a/public/css/UX.css
+++ b/public/css/UX.css
@@ -331,6 +331,29 @@ select {
     border: 1px solid #0099ff;
 }
 
+.tabsCloseButton:hover{
+    color:#fff;
+    font-family: 'Gill Sans', sans-serif;
+    padding-left: 1em;
+    opacity: 0.5;
+    display:inline;
+
+}
+
+.tabsCloseButton {
+    color:#111;
+    font-family: 'Gill Sans', sans-serif;
+    padding-left: 1em;
+    opacity: 1.0;
+    display: inline;
+
+}
+
+#tabsDivTabEdit1{
+    padding: 0em;
+    opacity: 0.5;
+}
+
 th,
 td {
     padding-left: 15px;
